# zephyr_template

./: .clang-format  .gitignore  README.md
project/: CMakeLists.txt  Kconfig  west.yml
project/app/: CMakeLists.txt  Kconfig
project/app/src/: main.c
project/drivers/: CMakeLists.txt  Kconfig
project/dts/bindings/: README.md
scripts/: build.sh  build_sim.sh  common.sh  flash.sh  init_project.sh  project.conf  requirements.txt  toolchain_shell.sh
